<resources>
    <string name="app_name">ServerStateMonitor</string>
    <string name="app_logo_desc">Centered logo in ImageView</string>
    <string name="nav_textview_devs_text">Managed devices</string>
    <string name="nav_textview_item_detail_text">Item details</string>
    <string name="nav_textview_stats_text">Statistics</string>
    <string name="nav_textview_to_do_text">To do</string>
    <string name="nav_textview_main_text">Home</string>
    <string name="todo_button_text">To do</string>
    <string name="devices_btn_text">View managed devices</string>
    <string name="stats_btn_text">View statistics</string>

    <string name="dev_image_desc">Device image</string>
    <string name="dev_name_text">Device name</string>
    <string name="dev_brand_text">Device brand</string>
    <string name="dev_ip_text">Device IP</string>
    <string name="dev_location_text">Device location</string>
    <string name="dev_type_text">Device type</string>
    <string name="todo_task_text">Todo task</string>
    <string name="todo_btn_text">Done</string>
    <string name="add_task_btn_text">Add Task</string>
    <string name="dev_state_text">Device state</string>
    <string name="device_up_state_text">Device is up</string>
    <string name="device_down_state_text">Device is down</string>
    <string name="title_activity_maps">Map</string>
    <string name="stats_btn_devs_text">Statistics</string>
    <string name="chart_title_text">Number of devices by type</string>
    <string name="credits_btn_text">Credits</string>
    <string name="author_textview_text">Delurintu George-Calin, C-124, ATM</string>
    <string name="dev_name_editText_text">Device name</string>
    <string name="nav_textview_add_dev_text">Add device</string>
    <string name="dev_brand_editText">Device brand</string>
    <string name="dev_ip_editText_text">Device IP</string>
    <string name="dev_location_editText_text">Device location (address)</string>
    <string name="add_dev_btn_text">Add</string>

</resources>
