<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/listViewItemBackground"
    android:cacheColorHint="@color/listViewItemBackground">

    <TextView
        android:id="@+id/device_brand_textview"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:text="@string/dev_brand_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_imageview"
        app:layout_constraintTop_toBottomOf="@+id/device_name_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/device_ip_textview"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:text="@string/dev_ip_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_imageview"
        app:layout_constraintTop_toBottomOf="@+id/device_brand_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/device_location_textview"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:text="@string/dev_location_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_imageview"
        app:layout_constraintTop_toBottomOf="@+id/device_ip_textview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/device_type_textview"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:text="@string/dev_type_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_imageview"
        app:layout_constraintTop_toBottomOf="@+id/device_location_textview"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/device_imageview"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/dev_image_desc"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/device_name_textview"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:text="@string/dev_name_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/device_imageview"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

</androidx.constraintlayout.widget.ConstraintLayout>